# gurudev-core

./: .gitignore  ALEXANDRIA_README.md  ALEXANDRIA_README_EN.md  BILINGUAL_INDEX.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  FINANCIAL_MODEL.md  FINANCIAL_MODEL_EN.md  FOUNDER_PROFILE.md  FOUNDER_PROFILE_EN.md  LICENSE  Makefile  OFFICIAL_LINKS.md  README.md  README_EN.md  REVENUE_MODELS.md  REVENUE_MODELS_EN.md  deploy_interpreter.py  deploy_interpreter_v11.py  deploy_lexer_fix.py  deploy_v12.py  deploy_v23b.py  diag.py  fix_docs.py  fix_exec_se.txt  fix_interpreter.py  fix_stdout.py  full_diag.py  full_diag2.py  git-auto.cmd  git-auto.ps1  gurudev-docs-update.ps1  publish-to-pypi.ps1  pyproject.toml  requirements.txt  roadmap.md  roadmap_EN.md  run_interpreter_test.py  setup.py  tem.IO.File]WriteAllText($PWDpyproject.toml, $content)  (+1 more)
.github/: dependabot.yml
.github/workflows/: ci.yml
_backup/: analyzer.py  pyproject.toml  requirements.txt  setup.py
alexandria/: __init__.py  cli.py
alexandria/core/: bridge.py  quantum_comparator.py  quantum_interface.py  translator.py  type_mapper.py
alexandria/data/: classical_quantum_pairs.json  programming_languages.json  quantum_algorithms.json  quantum_languages.json
alexandria_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: ARQUITETURA_NAMESPACES.md  ARQUITETURA_NAMESPACES_EN.md  BIBLIOTECA_PADRAO.md  BIBLIOTECA_PADRAO_EN.md  CONTRIBUICAO_GRAMATICA.md  CONTRIBUICAO_GRAMATICA_EN.md  EXEMPLOS_VALIDACAO.md  EXEMPLOS_VALIDACAO_EN.md  FORMALIZACAO_MATEMATICA_EN.md  GRAMATICA_EBNF_GURUDEV.md  GRAMMAR_ V1.1.0-preGuruMatrix5D  GRAMMAR_EXTRAS_VOC_EBNF.ebnf  GRAMMAR_V1_0_0_ALPHA.md  GRAMMAR_V1_0_0_ALPHA_EN.md  GURUBYTE_v0.1.1.md  GURUBYTE_v0.1.1_EN.md  GURUCOMPILERSPECIFICATION.md  GURUDEV_LEXER_v.0.2.md  GURUDEV_LEXER_v.0.2_EN.md  GURU_COMPILER_SPECIFICATION.md  GURU_COMPILER_SPECIFICATION_EN.md  GURU_INSTRUCTION_SETv01.md  GURU_INSTRUCTION_SETv01_EN.md  GURU_MATRIX5D_EN.md  GVM_v.0.1.1.md  GVM_v.0.1.1_EN.md  GuruInstructionSETv01.md  LEXER_OVERVIEW.md  LEXER_OVERVIEW_EN.md  LEXER_RULES_EXTRAS.ebnf  LEXER_RULES_EXTRAS_EN.ebnf  README.md  README.md (Da Gramática EBNF da GuruDev)  README.md (Da Gramática GruruDev)  README.md (Da Gramática GuruDev)  README.md (da Gramática EBNF da GuruDev®)  README_EN.md  SINTAXE.md  SINTAXE_EN.md  TESTS_PARSER_NOMES_RESERVADOS.ebnf  (+6 more)
docs/pitch_decks/: Artemisia_Pitch_Deck.md  Artemisia_Pitch_Deck_EN.md
examples/: basic_usage.py  calc.guru  demo_interpreter.guru  fluxo.guru  funcoes.guru  hello.guru  ontologico.guru  quantum_demo.guru  run_example.py  teoria_geral_funcao.guru
experiments/: __init__.py
experiments/piroot_vqe/: README.md  __init__.py  barren_plateau_test.py  piroot_vqe.py
gurudev_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
research/: programacao_comparada.md  programacao_comparada_EN.md
src/: __init__.py  ast_nodes.py  cli.py  interpreter.py  parser.py  parsetab.py  quantum_result.py  repl.py  semantic_analyzer.py  symbol_table.py
src/lexer/: __init__.py  gurudev_lexer.py  gurudev_lexer.py.bak5  gurudev_lexer.py.bak7  gurudev_lexer.py.bak8
tests/: __init__.py  test_alexandria_integration.py  test_analyzer.py  test_fluxo.py  test_funcao.py  test_gurumatrix.py  test_interpreter.py  test_piroot_vqe.py  test_quantum_comparator.py  test_quantum_dispatch.py  test_quantum_interface.py
