[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gurudev-core"
version = "1.2.0-alpha"
description = "GuruDev - Linguagem Ontologica de Programacao"
readme = "README.md"
license = {text = "Business Source License 1.1"}
authors = [
    {name = "Guilherme Goncalves Machado", email = "guilhermemachado.ceo@hubstry.dev"}
]
keywords = ["programming language", "ontological", "gurudev", "interpreter", "compiler"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
]
requires-python = ">=3.8"
dependencies = [
    "ply>=3.11",
]

[project.optional-dependencies]
dev = ["pytest>=6.2.0"]

[project.urls]
Homepage = "https://github.com/Hubstry-DeepTech/gurudev-core"
Repository = "https://github.com/Hubstry-DeepTech/gurudev-core"

[project.scripts]
gurudev = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
